fix get user api.
